--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		document.write("<h2>"+document.title+"</h2>");
 	</script>
 	
-	<img src="C:\Users\eilar\OneDrive\Documentos\tech_tech_prog_car\cadastro-ts\img\cmd.png" width="400" height="341" />
+	<img src="C:\Users\eilar\OneDrive\Documentos\tech_tech_prog_car\cadastro-ts\img\ide.png" width="400" height="341" />
 	<br><br><br>
 	<form id="formularioDeCadastro">
 		<label for="nome">Nome Completo:</label>
