--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<button type="submit">Enviar</button>	
 	</form>
 </head>	
-	<script src="index.js"></script>
+	<script src="script.js"></script>
 	<script src="script.ts"></script>
 		
 <br>
